labs/aula05/dep-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: 4labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy: {}
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: registry:5000/4linux-app:latest
        name: app
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.2"
          limits:
            memory: "256Mi"
            cpu: "0.4"

        volumeMounts:
        - name: claim-nfs-app
          mountPath: "/app"
        - name: config-volume-php
          mountPath: "/app/php-ini/"

      volumes:
        - name: claim-nfs-app
          persistentVolumeClaim:
            claimName: claim-nfs-app
        - name: config-volume-php
          configMap:
            name: php-config
