labs/aula05/memcached2-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: memcached2
  name: memcached2
  namespace: 4labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached2
  strategy: {}
  template:
    metadata:
      labels:
        app: memcached2
    spec:
      containers:
      - image: memcached:latest
        name: memcached2
        ports:
        - containerPort: 11211
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "100Mi"
            cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memcached2
  name: memcached2
  namespace: 4labs
spec:
  clusterIP: None
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: memcached2
