labs/aula05/ingress-app.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  namespace: 4labs
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 8080
    host: app.4labs.example
